--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   }
 }
